# tdscpp

./: .kateconfig  CMakeLists.txt  README.md  clang-mingw-amd64.cmake  msvc-amd64.cmake  tdscppConfig.cmake.in
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  release.yml
src/: batch.cpp  bcp.cpp  collation.cpp  colltest.cpp  config.h.in  ringbuf.cpp  ringbuf.h  rpc.cpp  ssl.cpp  tdscpp-private.h  tdscpp-test.cpp  tdscpp.cpp  tdscpp.h  tests.cpp  value.cpp  ver100coll.cpp  ver140coll.cpp  ver80coll.cpp  ver90coll.cpp
